include/dss_capi.h

    /*
    Array of strings with all CapControl names.
    */
    DSS_CAPI_DLL void CapControls_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as CapControls_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void CapControls_Get_AllNames_GR(void);
    /*
    Name of the Capacitor that is controlled.
    */
    DSS_CAPI_DLL char* CapControls_Get_Capacitor(void);
    /*
    Transducer ratio from pirmary current to control current.
    */
    DSS_CAPI_DLL double CapControls_Get_CTratio(void);
    DSS_CAPI_DLL double CapControls_Get_DeadTime(void);
    /*
    Time delay [s] to switch on after arming.  Control may reset before actually switching.
    */
    DSS_CAPI_DLL double CapControls_Get_Delay(void);
    /*
    Time delay [s] before swithcing off a step. Control may reset before actually switching.
    */
    DSS_CAPI_DLL double CapControls_Get_DelayOff(void);
    /*
    Sets the first CapControl as active. Return 0 if none.
    */
    DSS_CAPI_DLL int32_t CapControls_Get_First(void);
    /*
    Type of automatic controller.
    */
    DSS_CAPI_DLL int32_t CapControls_Get_Mode(void);
    /*
    Full name of the element that PT and CT are connected to.
    */
    DSS_CAPI_DLL char* CapControls_Get_MonitoredObj(void);
    /*
    Terminal number on the element that PT and CT are connected to.
    */
    DSS_CAPI_DLL int32_t CapControls_Get_MonitoredTerm(void);
    /*
    Sets a CapControl active by name.
    */
    DSS_CAPI_DLL char* CapControls_Get_Name(void);
    /*
    Gets the next CapControl in the circut. Returns 0 if none.
    */
    DSS_CAPI_DLL int32_t CapControls_Get_Next(void);
    /*
    Threshold to switch off a step. See Mode for units.
    */
    DSS_CAPI_DLL double CapControls_Get_OFFSetting(void);
    /*
    Threshold to arm or switch on a step.  See Mode for units.
    */
    DSS_CAPI_DLL double CapControls_Get_ONSetting(void);
    /*
    Transducer ratio from primary feeder to control voltage.
    */
    DSS_CAPI_DLL double CapControls_Get_PTratio(void);
    /*
    Enables Vmin and Vmax to override the control Mode
    */
    DSS_CAPI_DLL uint16_t CapControls_Get_UseVoltOverride(void);
    /*
    With VoltOverride, swtich off whenever PT voltage exceeds this level.
    */
    DSS_CAPI_DLL double CapControls_Get_Vmax(void);
    /*
    With VoltOverride, switch ON whenever PT voltage drops below this level.
    */
    DSS_CAPI_DLL double CapControls_Get_Vmin(void);
    /*
    Name of the Capacitor that is controlled.
    */
    DSS_CAPI_DLL void CapControls_Set_Capacitor(char* Value);
    /*
    Transducer ratio from pirmary current to control current.
    */
    DSS_CAPI_DLL void CapControls_Set_CTratio(double Value);
    DSS_CAPI_DLL void CapControls_Set_DeadTime(double Value);
    /*
    Time delay [s] to switch on after arming.  Control may reset before actually switching.
    */
    DSS_CAPI_DLL void CapControls_Set_Delay(double Value);
    /*
    Time delay [s] before swithcing off a step. Control may reset before actually switching.
    */
    DSS_CAPI_DLL void CapControls_Set_DelayOff(double Value);
    /*
    Type of automatic controller.
    */
    DSS_CAPI_DLL void CapControls_Set_Mode(int32_t Value);
    /*
    Full name of the element that PT and CT are connected to.
    */
    DSS_CAPI_DLL void CapControls_Set_MonitoredObj(char* Value);
    /*
    Terminal number on the element that PT and CT are connected to.
    */
    DSS_CAPI_DLL void CapControls_Set_MonitoredTerm(int32_t Value);
    /*
    Sets a CapControl active by name.
    */
    DSS_CAPI_DLL void CapControls_Set_Name(char* Value);
    /*
    Threshold to switch off a step. See Mode for units.
    */
    DSS_CAPI_DLL void CapControls_Set_OFFSetting(double Value);
    /*
    Threshold to arm or switch on a step.  See Mode for units.
    */
    DSS_CAPI_DLL void CapControls_Set_ONSetting(double Value);
    /*
    Transducer ratio from primary feeder to control voltage.
    */
    DSS_CAPI_DLL void CapControls_Set_PTratio(double Value);
    /*
    Enables Vmin and Vmax to override the control Mode
    */
    DSS_CAPI_DLL void CapControls_Set_UseVoltOverride(uint16_t Value);
    /*
    With VoltOverride, swtich off whenever PT voltage exceeds this level.
    */
    DSS_CAPI_DLL void CapControls_Set_Vmax(double Value);
    /*
    With VoltOverride, switch ON whenever PT voltage drops below this level.
    */
    DSS_CAPI_DLL void CapControls_Set_Vmin(double Value);
    /*
    Number of CapControls in Active Circuit
    */
    DSS_CAPI_DLL int32_t CapControls_Get_Count(void);
    DSS_CAPI_DLL void CapControls_Reset(void);
    DSS_CAPI_DLL int32_t CapControls_Get_idx(void);
    DSS_CAPI_DLL void CapControls_Set_idx(int32_t Value);